--- a/thoughts/posts/data-engineering/Malloy.ipynb
+++ b/thoughts/posts/data-engineering/Malloy.ipynb
@@ -12,6 +12,8 @@
     "date: \"05/17/2023\"\n",
     "image: malloy-logo.png\n",
     "feed: true\n",
+    "title-block-banner: \"../banner.png\"\n",
+    "title-block-banner-color: \"#FFFFFF\"\n",
     "categories:\n",
     "  - tools\n",
     "  - data-engineering\n",
@@ -20,6 +22,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d229b2a9",
    "metadata": {},
@@ -30,6 +33,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c51bfdd3",
    "metadata": {},
@@ -207,6 +211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3cc4abf5",
    "metadata": {},
@@ -346,6 +351,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "413227a5",
    "metadata": {},
@@ -357,6 +363,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "db536709",
    "metadata": {},
