--- a/thoughts/posts/data-engineering/ScalingPython.ipynb
+++ b/thoughts/posts/data-engineering/ScalingPython.ipynb
@@ -11,6 +11,8 @@
     "date: \"01/03/2022\"\n",
     "image: scalingpython.png\n",
     "feed: true\n",
+    "title-block-banner: \"../banner.png\"\n",
+    "title-block-banner-color: \"#FFFFFF\"\n",
     "categories:\n",
     "  - data-science\n",
     "  - data-engineering\n",
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,6 +111,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
