--- a/thoughts/posts/vision/visualizingCNNs.ipynb
+++ b/thoughts/posts/vision/visualizingCNNs.ipynb
@@ -12,6 +12,8 @@
     "date: \"4/06/2020\"\n",
     "image: mathew.jpg\n",
     "feed: true\n",
+    "title-block-banner: \"../banner.png\"\n",
+    "title-block-banner-color: \"#FFFFFF\"\n",
     "categories:\n",
     "  - deep learning\n",
     "  - computer vision\n",
@@ -21,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a16086a9",
    "metadata": {},
@@ -55,7 +58,7 @@
     "* **Unpooling** : Since max pooling operation is non-invertible, an approximate inverse is obtained by restoring the activations at the locations of maximum activation selection.\n",
     "* **Rectification** : The reconstructed signals are passed through a relu non-linearity.\n",
     "* **Filtering** : In the deconvnet each convnet filter is transposed (flipped vertically and horizontally) and applied to the rectified activations.\n",
-    "![Deconvnet attached to a convnet ><](my_icons/deconvnet.jpeg)\n",
+    "![](deconvnet.jpeg \"Deconvnet\")\n",
     "\n",
     "### Convnet Visualization\n",
     "\n",
@@ -90,6 +93,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "49a5ca83",
    "metadata": {},
@@ -100,6 +104,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6e2cdbff",
    "metadata": {},
