--- a/thoughts/posts/welcome/Welcome.ipynb
+++ b/thoughts/posts/welcome/Welcome.ipynb
@@ -12,6 +12,8 @@
     "date: \"6/14/2019\"\n",
     "image: shakespeare.jpg\n",
     "feed: true\n",
+    "title-block-banner: \"../banner.png\"\n",
+    "title-block-banner-color: \"#FFFFFF\"\n",
     "categories:\n",
     "  - others\n",
     "\n",
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4df3f98",
    "metadata": {},
