--- a/thoughts/posts/data-engineering/Malloy.ipynb
+++ b/thoughts/posts/data-engineering/Malloy.ipynb
@@ -16,13 +16,12 @@
     "title-block-banner-color: \"#FFFFFF\"\n",
     "categories:\n",
     "  - tools\n",
-    "  - data-engineering\n",
+    "  - data engineering\n",
     "  - malloy \n",
     "---"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d229b2a9",
    "metadata": {},
@@ -33,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c51bfdd3",
    "metadata": {},
@@ -211,7 +209,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3cc4abf5",
    "metadata": {},
@@ -351,7 +348,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "413227a5",
    "metadata": {},
@@ -363,7 +359,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "db536709",
    "metadata": {},
