--- a/thoughts/posts/data-engineering/ScalingPython.ipynb
+++ b/thoughts/posts/data-engineering/ScalingPython.ipynb
@@ -14,14 +14,13 @@
     "title-block-banner: \"../banner.png\"\n",
     "title-block-banner-color: \"#FFFFFF\"\n",
     "categories:\n",
-    "  - data-science\n",
-    "  - data-engineering\n",
+    "  - data science\n",
+    "  - data engineering\n",
     "  \n",
     "---"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,7 +53,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +67,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +97,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,7 +106,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
